--- a/dz4.1.ipynb
+++ b/dz4.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,28 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "year_list = [1900, 1933, 1966, 2000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_dynamics(year_list):\n",
     "    dynamics_f_list = []\n",
     "    dynamics_m_list = []\n",
-    "    dynamics = {\n",
-    "        'F': [],\n",
-    "        'M': []\n",
-    "    }\n",
+    "    dynamics = {}\n",
     "    for year in year_list:\n",
     "        file_path = os.path.join(\n",
     "            DATA_PATH, f'yob{year}.txt'\n",
@@ -78,7 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 203,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "year_list = [1900, 1933, 1966, 2000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +84,7 @@
        "['Jacob', 'Michael', 'Matthew']"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +105,7 @@
        " 'M': [150483, 991315, 1783729, 1962969]}"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
